TFP-5957: refakturer ressurslenker i fptilbake (#2964)